--- a/src/WakeCommerce/Catalog.Application/Catalog.Application.csproj
+++ b/src/WakeCommerce/Catalog.Application/Catalog.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\shared\ServiceDefaults\ServiceDefaults.csproj" />
+    <ProjectReference Include="..\Shared.Defaults\Shared.Defaults.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
+    <PackageReference Include="Scrutor" />
+  </ItemGroup>
 </Project>
