Layers, CQRS and base structure.

--- a/src/WakeCommerce/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/src/WakeCommerce/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -13,4 +13,8 @@
 		<PackageReference Include="Newtonsoft.Json" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj" />
+	</ItemGroup>
 </Project>
