--- a/src/WakeCommerce/Catalog.Application/Catalog.Application.csproj
+++ b/src/WakeCommerce/Catalog.Application/Catalog.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Catalog.Domain\Catalog.Domain.csproj" />
     <ProjectReference Include="..\Shared.Defaults\Shared.Defaults.csproj" />
   </ItemGroup>
   <ItemGroup>
