--- a/src/WakeCommerce/Catalog.Web.Api/Catalog.Web.Api.csproj
+++ b/src/WakeCommerce/Catalog.Web.Api/Catalog.Web.Api.csproj
@@ -18,4 +18,8 @@
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" />
 		<PackageReference Include="Swashbuckle.AspNetCore" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Catalog.Infrastructure\Catalog.Infrastructure.csproj" />
+	</ItemGroup>
 </Project>
