EF Configuration, first migration.

--- a/src/WakeCommerce/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/src/WakeCommerce/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -17,4 +17,9 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Database\Migrations\" />
+	  <Folder Include="Migrations\" />
+	</ItemGroup>
 </Project>
