--- a/src/WakeCommerce/Catalog.Web.Api/Catalog.Web.Api.csproj
+++ b/src/WakeCommerce/Catalog.Web.Api/Catalog.Web.Api.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>467aebc1-d58f-4388-a2a3-314f7b8ce967</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
 	<ItemGroup>
