--- a/src/WakeCommerce/Catalog.Web.Api/appsettings.Development.json
+++ b/src/WakeCommerce/Catalog.Web.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    //"Database": "Host=postgresql;Port=5432;Database=wake-commerce-db;Username=root;Password=root;Include Error Detail=true",
-    "Database": "Server=127.0.0.1;Database=wake-commerce-db;Uid=root;Pwd=root;"
+    //"Database": "Host=postgres;Port=5432;Database=wake-commerce;Username=postgres;Password=postgres;Include Error Detail=true"
+    "Database": "Server=127.0.0.1;Database=wake-commerce;Uid=root;Pwd=root;"
   },
   "Logging": {
     "LogLevel": {
