--- a/src/WakeCommerce/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/src/WakeCommerce/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -7,18 +7,18 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AspNetCore.HealthChecks.NpgSql" />
-		<PackageReference Include="EFCore.NamingConventions" />
-		<PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" />
-		<PackageReference Include="Newtonsoft.Json" />
-		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
-	</ItemGroup>
-
-	<ItemGroup>
 	  <ProjectReference Include="..\Catalog.Application\Catalog.Application.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <Folder Include="Database\Migrations\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
+	  <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks" Version="9.0.9" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 	</ItemGroup>
 </Project>
