--- a/src/WakeCommerce/Unit.Tests/Unit.Tests.csproj
+++ b/src/WakeCommerce/Unit.Tests/Unit.Tests.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WakeCommerce\Catalog.Infrastructure\Catalog.Infrastructure.csproj" />
-    <ProjectReference Include="..\WakeCommerce\Shared.Defaults\Shared.Defaults.csproj" />
+    <ProjectReference Include="..\Catalog.Infrastructure\Catalog.Infrastructure.csproj" />
+    <ProjectReference Include="..\Shared.Defaults\Shared.Defaults.csproj" />
   </ItemGroup>
 
   <ItemGroup>
